- put logic in viewmodel into separate methods. - use List from Kotlin instead of ArrayList.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,16 @@
     <string name="app_name">Top Repositories</string>
     <string name="tool_bar_title">"Top Repositories"</string>
 
+    // Repository list page
     <string name="empty_view_message">No results to display</string>
     <string name="error_message">An error has occurred\nPlease try again</string>
+    <string name="repo_star">Stars: %s</string>
+
+
+    // Welcome page
     <string name="welcome_title">Welcome!</string>
     <string name="welcome_title_instruction">Please Enter the GitHub Organization Name</string>
     <string name="enter_org_name_hint">GitHub Organization Name</string>
     <string name="btn_enter_org_name">Submit</string>
 
-    <string name="repo_star">Stars: %s</string>
 </resources>
